# kata

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
game/: main.cpp
kata/app/: app.cpp  app.hpp
kata/core/: error.cpp  error.hpp
kata/ecs/: id_allocator.cpp  id_allocator.hpp  registry.cpp  registry.hpp  system.cpp  system.hpp
kata/input/: input.cpp  input.hpp  key.hpp
kata/render/: render.cpp  render.hpp  window.cpp  window.hpp
kata/resource/: shader.cpp  shader.hpp
kata/rhi/: command.cpp  command.hpp  context.cpp  context.hpp  pipeline.cpp  pipeline.hpp
resources/shader/: material.slang
